--- a/MetricsOnValidationSet_reply.ipynb
+++ b/MetricsOnValidationSet_reply.ipynb
@@ -45,6 +45,16 @@
     "prauc = metrics.compute_prauc(pr,gt)\n",
     "rce = metrics.compute_rce(pr,gt)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(prauc)\n",
+    "print(rce)"
+   ]
   }
  ],
  "metadata": {
