--- a/Untitled3.ipynb
+++ b/Untitled3.ipynb
@@ -114,10 +114,144 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_ids = torch.tensor([101, 58335, 12806, 21660, 10589, 149, 21793, 11259, 100061, 11273, 75416, 58521, 137, 20970, 16889, 10415, 45389, 14120, 131, 120, 120, 188, 119, 11170, 120, 163, 12674, 11211, 11127, 11703, 11211, 11779, 10729, 10874, 11396, 102]).unsqueeze(0)  # Batch size 1\n",
+    "outputs = model(input_ids)\n",
+    "last_hidden_states = outputs[0]  # The last hidden-state is the first element of the output tuple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_ids = torch.tensor(tokenizer.encode(\"Hello, my dog is cute\")).unsqueeze(0)  # Batch size 1\n",
+    "outputs = model(input_ids)\n",
+    "last_hidden_states = outputs[0]  # The last hidden-state is the first element of the output tuple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[-7.4056e-02, -2.5629e-01,  3.9576e-03,  ...,  3.3745e-01,\n",
+       "           9.6348e-02, -7.4602e-02],\n",
+       "         [-3.7866e-01,  2.4644e-04,  3.8359e-01,  ...,  4.0054e-01,\n",
+       "          -3.5663e-01, -3.5926e-01],\n",
+       "         [-3.2465e-01, -6.2971e-01,  6.9400e-01,  ..., -1.2656e-01,\n",
+       "           1.1308e-01, -3.0379e-01],\n",
+       "         ...,\n",
+       "         [-1.4325e-01, -4.6731e-01,  8.1009e-01,  ...,  3.6486e-01,\n",
+       "           4.4799e-01, -1.8962e-01],\n",
+       "         [-2.4273e-01, -6.3758e-01,  1.4377e-01,  ...,  1.1618e+00,\n",
+       "           7.6320e-01, -1.2245e-01],\n",
+       "         [ 1.0538e-01, -6.8167e-01,  5.1111e-01,  ...,  3.6763e-01,\n",
+       "           3.9284e-01, -3.1134e-02]]], grad_fn=<NativeLayerNormBackward>)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "last_hidden_states"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[101, 31178, 117, 15127, 17835, 10124, 21610, 10112, 102]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenizer.encode(\"Hello, my dog is cute\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 36, 768])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "last_hidden_states.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[101, 31178, 117, 15127, 17835, 10124, 21610, 10112, 102]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenizer.encode(\"Hello, my dog is cute\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'[CLS] Hello, my dog is cute'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenizer.decode([101, 31178, 117, 15127, 17835, 10124, 21610, 10112])"
+   ]
   }
  ],
  "metadata": {
