--- a/Untitled3.ipynb
+++ b/Untitled3.ipynb
@@ -41,61 +41,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['[CLS]',\n",
-       " 'Mala',\n",
-       " '##chi',\n",
-       " 'Wide',\n",
-       " '##man',\n",
-       " 'L',\n",
-       " '##OS',\n",
-       " '##E',\n",
-       " 'YOU',\n",
-       " '##R',\n",
-       " 'MI',\n",
-       " '##ND',\n",
-       " '@',\n",
-       " 'might',\n",
-       " '##ym',\n",
-       " '##al',\n",
-       " '##13',\n",
-       " 'https',\n",
-       " ':',\n",
-       " '/',\n",
-       " '/',\n",
-       " 't',\n",
-       " '.',\n",
-       " 'co',\n",
-       " '/',\n",
-       " 'Z',\n",
-       " '##X',\n",
-       " '##6',\n",
-       " '##P',\n",
-       " '##q',\n",
-       " '##6',\n",
-       " '##V',\n",
-       " '##2',\n",
-       " '##w',\n",
-       " '##8',\n",
-       " '[SEP]']"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tokenizer.convert_ids_to_tokens(['101', '58335', '12806', '21660', '10589', '149', '21793', '11259', '100061', '11273', '75416', '58521', '137', '20970', '16889', '10415', '45389', '14120', '131', '120', '120', '188', '119', '11170', '120', '163', '12674', '11211', '11127', '11703', '11211', '11779', '10729', '10874', '11396', '102'])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -251,6 +196,115 @@
    ],
    "source": [
     "tokenizer.decode([101, 31178, 117, 15127, 17835, 10124, 21610, 10112])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "str = '[CLS] Malachi'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[101, 101, 58335, 12806, 102]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenizer.encode(str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['[CLS]', '[CLS]', 'Mala', '##chi', '[SEP]']"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenizer.convert_ids_to_tokens([101, 101, 58335, 12806, 102])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_ids = torch.tensor([101, 101, 58335, 12806, 102]).unsqueeze(0)  # Batch size 1\n",
+    "outputs = model(input_ids)\n",
+    "last_hidden_states = outputs[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[ 1.2833e-01, -8.7672e-02,  5.1223e-01,  ...,  5.1597e-02,\n",
+       "           4.0623e-02,  3.8689e-02],\n",
+       "         [ 1.3011e-01, -8.9307e-02,  5.1085e-01,  ...,  5.1296e-02,\n",
+       "           4.0854e-02,  3.8339e-02],\n",
+       "         [-2.2348e-01, -1.6424e-01,  7.4471e-01,  ...,  1.6253e-01,\n",
+       "          -2.9908e-01,  3.1246e-01],\n",
+       "         [-6.6516e-04, -3.8011e-01,  6.1914e-01,  ..., -3.3696e-01,\n",
+       "          -7.9211e-02, -7.4923e-02],\n",
+       "         [ 2.4696e-01, -3.8488e-01,  1.0297e+00,  ..., -1.6962e-01,\n",
+       "          -5.3971e-02,  3.5280e-01]]], grad_fn=<NativeLayerNormBackward>)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "last_hidden_states"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 5, 768])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "last_hidden_states.shape"
    ]
   }
  ],
