--- a/bert_embeddings.ipynb
+++ b/bert_embeddings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,15 +12,347 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "tokenizer = BertTokenizer.from_pretrained('bert-base-multilingual-cased', do_lower_case=False)\n",
     "model = BertModel.from_pretrained('/dev/bert/')\n",
-    "input_ids = torch.tensor([101, 58335, 12806, 21660, 10589, 149, 21793, 11259, 100061, 11273, 75416, 58521, 137, 20970, 16889, 10415, 45389, 14120, 131, 120, 120, 188, 119, 11170, 120, 163, 12674, 11211, 11127, 11703, 11211, 11779, 10729, 10874, 11396, 102]).unsqueeze(0)  # Batch size 1\n",
+    "input_ids = torch.tensor([101, 108, 31278, 90939, 70325, 196, 199, 71436, 10107, 29190, 10107, 106, 16680, 68314, 10153, 17015, 15934, 10104, 108, 10233, 12396, 14945, 10107, 10858, 11405, 13600, 13597, 169, 57343, 64482, 119, 119, 119, 100, 11741, 16381, 10109, 68830, 10110, 20886, 108, 10233, 11127, 21768, 100, 14120, 131, 120, 120, 188, 119, 11170, 120, 12132, 10884, 10157, 11490, 12022, 10113, 10731, 10729, 11565, 14120, 131, 120, 120, 188, 119, 11170, 120, 162, 11211, 11703, 12022, 11211, 10240, 44466, 100886, 102]).unsqueeze(0)  # Batch size 1\n",
     "outputs = model(input_ids)\n",
     "last_hidden_states = outputs[0]  # The last hidden-state is the first element of the output tuple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer = BertTokenizer.from_pretrained('bert-base-multilingual-cased', do_lower_case=False)\n",
+    "model = BertModel.from_pretrained('/dev/bert/')\n",
+    "input_ids = torch.tensor([101, 108]).unsqueeze(0)  # Batch size 1\n",
+    "outputs = model(input_ids)\n",
+    "last_hidden_states = outputs[0]  # The last hidden-state is the first element of the output tuple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_ids = torch.tensor(tokenizer.encode(\"[CLS] My sentence\")).unsqueeze(0)\n",
+    "outputs = model(input_sentence)\n",
+    "embeddings_of_last_layer = outputs[0]\n",
+    "cls_embeddings = embeddings_of_last_layer[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 79])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input_ids.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 2, 768])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "last_hidden_states.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[ 0.2685, -0.5767,  0.1836,  ..., -0.0248,  0.0143, -0.3322],\n",
+       "         [-0.1389, -0.2711, -0.1331,  ...,  0.1358,  0.2481, -0.6525]]],\n",
+       "       grad_fn=<NativeLayerNormBackward>)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "last_hidden_states"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mean = last_hidden_states.mean(dim=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 768])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 6.4805e-02, -4.2387e-01,  2.5238e-02, -4.5042e-02,  2.8164e-01,\n",
+       "          1.2641e-01,  4.8142e-02,  4.2612e-01, -9.0083e-02,  2.7727e-01,\n",
+       "          5.1189e-01,  1.4792e-02,  1.1726e-01,  3.6286e-01,  3.8785e-01,\n",
+       "         -8.8801e-02,  4.5374e-01,  2.1557e-01, -3.9564e-01,  4.0138e-01,\n",
+       "         -8.2246e-01,  8.9695e-02,  7.3050e-01, -3.4167e-01,  2.1496e-01,\n",
+       "          6.6250e-01, -4.7407e-01, -3.1473e-01,  2.2099e-01, -2.9732e-01,\n",
+       "         -4.0190e-01, -1.1781e-01, -1.4600e-01,  2.1357e-01, -1.3338e-02,\n",
+       "         -1.6685e-01,  1.7888e-01,  6.5907e-02,  3.6534e-02,  6.4048e-02,\n",
+       "          3.4789e-01,  2.4846e-01,  1.1392e-01, -1.7823e-01, -2.4612e-01,\n",
+       "         -1.1902e-01,  6.2179e-02,  3.8479e-01, -2.2683e-03,  7.3421e-01,\n",
+       "          1.9867e-01, -1.7005e-01, -5.8061e-01,  6.1885e-02, -4.4230e-01,\n",
+       "         -7.4421e-02, -1.6320e-01, -5.0988e-02,  4.6794e-01,  4.5912e-01,\n",
+       "         -1.5221e-01,  9.3750e-02, -1.7329e-01,  9.6182e-02, -4.0823e-01,\n",
+       "          6.4527e-02, -3.6043e-01,  1.3212e-01, -2.6099e-01, -2.9154e-01,\n",
+       "         -3.7432e-01,  2.8719e-01,  4.3891e-01,  2.6618e-01, -4.8076e-01,\n",
+       "          6.4000e-01,  1.9996e-01, -1.7026e-01, -2.2563e-01, -3.8437e-02,\n",
+       "          3.4650e-01,  3.0922e-01,  1.1747e-03,  6.6841e-01,  3.4594e-01,\n",
+       "          1.9895e-01,  4.0211e-01, -2.0808e-01,  4.0794e-01, -5.1026e-01,\n",
+       "          2.5054e-02,  2.3827e-01,  7.6360e-01,  2.0292e-01, -3.3808e-02,\n",
+       "          3.9786e-01,  4.2702e-01, -1.9901e-01, -1.5481e-01,  2.0363e-01,\n",
+       "         -4.6784e-01, -1.6299e-01,  8.5943e-01, -1.2681e-01,  2.9046e-01,\n",
+       "         -5.9157e-02, -3.4299e-03, -2.9384e-01,  5.7925e-03,  6.3568e-01,\n",
+       "          3.2342e-01, -1.0298e-01, -9.6554e-03,  4.5648e-01,  1.9576e-01,\n",
+       "          1.0203e-02,  1.2445e-01, -3.4769e-01,  1.1490e-01, -9.9252e-02,\n",
+       "         -6.1753e-01, -4.6705e-02, -2.7055e-01,  1.6090e-01, -3.4086e-01,\n",
+       "         -2.1100e-01,  2.2879e-02, -2.1669e-02,  9.0677e-01, -2.8190e-01,\n",
+       "         -2.0361e-01, -2.1859e-01, -1.6187e-01,  5.0468e-02, -6.1477e-02,\n",
+       "         -3.1121e-01,  4.5543e-01,  1.8019e-01, -3.3103e-01,  3.9696e-01,\n",
+       "          1.3047e-01, -1.6894e-02, -6.3304e-01, -4.3492e-01, -2.0265e-01,\n",
+       "          2.8370e-01, -6.2301e-01, -1.4130e-01,  2.3103e-01,  5.1775e-02,\n",
+       "         -2.8722e-01,  1.6709e-01,  3.1409e-01,  3.4725e-01, -4.5087e-01,\n",
+       "          1.0540e-01,  1.9273e-01, -1.9792e-01, -2.0507e-01,  1.6554e-01,\n",
+       "         -3.4340e-01, -5.6811e-02, -3.1969e-01,  3.8546e-01,  5.3657e-02,\n",
+       "         -3.8670e-01,  7.9143e-02, -4.1264e-02, -4.3146e-01,  1.1572e-01,\n",
+       "          2.8666e-01,  1.9627e-01, -2.8746e-01,  1.2080e-01,  4.7748e-01,\n",
+       "          5.1259e-01, -4.7403e-01, -3.9579e-01, -7.6639e-02, -5.7779e-01,\n",
+       "         -2.2547e-01,  2.7752e-01,  5.8264e-01, -5.7480e-02,  4.0947e-02,\n",
+       "         -1.2603e-01,  1.5001e-01,  6.4848e-01, -1.2557e-01, -2.9649e-01,\n",
+       "          2.9064e-01, -1.0008e-02, -2.4099e-01, -4.2563e-01, -2.3985e-01,\n",
+       "         -3.4146e-01,  1.5939e-01,  2.9826e-01,  2.9757e-01,  5.2335e-02,\n",
+       "         -2.3776e-01, -8.4225e-02,  2.9285e-01,  4.2382e-01, -1.4796e-02,\n",
+       "          4.9129e-01, -1.9886e-01, -1.7847e-01, -3.3629e-01,  6.2977e-01,\n",
+       "          7.6284e-02, -1.5963e-01,  2.9345e-01,  7.2709e-02,  3.9091e-01,\n",
+       "          6.4743e-02, -1.2749e-01,  1.5374e-01,  3.5810e-01,  3.0659e-01,\n",
+       "         -3.5905e-02,  1.3783e-01, -1.2210e-01, -1.2981e-02,  4.3598e-02,\n",
+       "         -3.9952e-02, -9.9538e-03,  1.4790e-01, -3.6253e-01, -3.7661e-01,\n",
+       "         -4.9125e-01, -2.0833e-01,  1.2803e-01,  4.0057e-01, -1.4522e+00,\n",
+       "          2.2986e-01, -1.2181e-02,  5.0004e-03, -3.0416e-01, -3.2663e-02,\n",
+       "         -7.8545e-02,  5.5936e-01,  1.4404e-01,  1.7029e-01,  2.6897e-01,\n",
+       "          1.8055e-01, -2.6593e-01, -6.8670e-02,  3.1931e-01, -1.0739e-01,\n",
+       "         -1.6615e-01, -1.3195e-01, -1.7583e-02, -2.0275e-01, -1.0056e-01,\n",
+       "          3.1574e-01,  3.0659e-01, -9.5307e-02,  5.4824e-01, -3.0954e-01,\n",
+       "          1.2739e-01, -1.0848e+00,  4.0507e-01, -1.3731e-01, -1.8255e-01,\n",
+       "          2.9596e-01, -9.6700e-02,  4.2538e-02, -1.2628e-02, -2.2608e-01,\n",
+       "         -3.5955e-01,  1.9460e-01,  2.7941e-01,  3.4903e-02,  1.3991e-01,\n",
+       "          3.5938e-01,  5.5415e-02, -1.8385e-01, -6.5064e-02,  1.2899e-01,\n",
+       "         -6.7445e-02, -4.8152e-01,  2.0789e-01,  1.8352e-01, -2.3852e-01,\n",
+       "          8.8490e-02, -5.1522e-02, -2.8353e-01, -6.0435e-02, -3.0925e-01,\n",
+       "         -1.1575e-01, -3.9677e-01,  8.2189e-03, -1.3074e-01,  8.1732e-02,\n",
+       "         -3.8318e-01, -3.6953e-01,  3.1585e-01,  2.9878e-01, -9.8857e-02,\n",
+       "         -8.5406e-02,  9.1839e-02, -2.1256e-01, -2.4259e-01, -4.7356e-02,\n",
+       "         -3.4465e-01, -1.9922e-01,  1.6666e-01,  6.0882e-01, -3.7288e-02,\n",
+       "         -1.7837e-01,  2.8214e-01, -3.3454e-01,  6.3730e-01, -1.4872e-01,\n",
+       "         -1.2339e-01, -9.1321e-02, -1.9469e-01, -6.8055e-01,  4.1583e-01,\n",
+       "         -1.5728e-01, -7.6475e-02,  1.7562e-01,  6.1624e-01,  3.5565e-01,\n",
+       "          1.2243e-01, -2.6549e-02, -2.0167e-01,  3.9499e-01,  3.8333e-02,\n",
+       "          7.5015e-02,  1.1153e+00, -1.7146e-01, -1.3666e-01, -1.1085e-01,\n",
+       "          3.4161e-01, -1.3215e-01,  1.3778e-01, -2.5397e-01,  2.2227e-02,\n",
+       "          9.2802e-02, -1.3949e-01,  5.3311e-01, -5.9121e-01, -2.6836e-01,\n",
+       "          1.4797e-01, -1.8811e-01,  4.0979e-01, -6.3634e-02, -1.4555e-01,\n",
+       "          2.6140e-01,  3.0455e-01,  2.6667e-01,  1.0222e-02, -4.9281e-02,\n",
+       "         -1.8737e-01, -9.6869e-01,  2.4703e-01, -1.3484e-02,  2.8726e-02,\n",
+       "         -1.8272e-02,  2.0853e-01, -5.1086e-02, -5.9549e-02, -3.5415e-01,\n",
+       "         -2.9266e-01, -1.6444e-01, -3.3937e-02, -3.4207e-01,  6.6547e-01,\n",
+       "         -5.3857e-02,  2.7065e-01, -6.1936e-01, -3.6081e-01,  3.9194e-01,\n",
+       "         -2.9385e-02, -1.3917e-01,  8.3737e-02,  1.0611e+00,  1.6074e-02,\n",
+       "         -1.1532e-01, -2.7015e-01,  5.0692e-01,  2.9221e-02,  1.7549e-01,\n",
+       "          5.8699e-02, -9.9447e-02,  3.9572e-01,  5.0310e-01, -5.3736e-01,\n",
+       "          3.6705e-02,  3.7710e-01,  2.7874e-01, -7.6413e-03, -1.6177e-01,\n",
+       "         -2.1182e-02, -9.4384e-03,  2.9041e-02, -3.4159e-01,  1.5876e-01,\n",
+       "          2.9884e-01,  7.1047e-02,  3.2576e-01,  5.1623e-01, -1.6385e-01,\n",
+       "          2.8455e-01,  3.2378e-01,  2.2051e-01, -3.0408e-01, -4.8168e-01,\n",
+       "          1.0075e-01,  3.4293e-01,  3.1962e-01,  2.8992e-01,  4.4777e-01,\n",
+       "          6.8341e-01, -3.8050e-01, -1.5749e-01, -5.4223e-02, -4.1968e-02,\n",
+       "          2.6355e-01,  2.8246e-01,  1.4440e-01, -6.8824e-01, -3.4200e-01,\n",
+       "          1.8117e-01, -4.1018e-01,  1.5798e-02, -3.8522e-01, -4.5454e-01,\n",
+       "         -6.2789e-02,  1.2112e-01, -2.7023e-01,  2.5691e-01, -1.4054e-01,\n",
+       "          7.1012e-02, -1.2375e-02,  1.5621e-01, -3.5720e-01,  3.3962e-01,\n",
+       "          2.4032e-02,  3.0787e-01,  4.4187e-02, -1.5740e-01,  8.0934e-02,\n",
+       "         -3.4215e-02,  1.9108e-02, -8.8326e-01, -2.7611e-02,  3.3548e-01,\n",
+       "         -5.2881e-02,  2.1000e-02, -2.3822e-01, -5.2379e-02, -5.1745e-01,\n",
+       "         -5.5718e-02, -2.3807e-01, -2.4918e-01,  1.5981e-01, -7.6645e-01,\n",
+       "         -1.7168e-01,  3.2980e-01,  2.8142e-01, -1.9060e-01,  4.7565e-01,\n",
+       "         -2.8181e-01, -2.0520e-01, -1.5858e-01,  2.0174e-01,  1.3797e-01,\n",
+       "         -2.2969e-01,  6.9177e-01, -1.5639e-01, -4.3299e-01,  3.2998e-01,\n",
+       "          4.0267e-02,  1.0519e-01, -5.0986e-01,  3.1619e-01, -1.3738e-01,\n",
+       "          1.5260e-01,  3.4159e-01,  7.2816e-01, -1.0810e-01, -2.6631e-01,\n",
+       "          4.6921e-01,  8.9216e-02,  2.6076e-01, -4.1730e-01,  2.3594e-01,\n",
+       "         -1.5076e-01,  1.6330e-01,  3.6587e-01, -8.8919e-01,  1.3149e-02,\n",
+       "         -1.9772e-01, -8.8182e-01, -1.0959e-01,  8.0698e-01,  6.9452e-01,\n",
+       "         -3.4532e-01,  1.1246e-01, -1.8184e-01,  1.2622e-01, -2.1774e-01,\n",
+       "         -1.4921e-02, -2.1963e-01,  4.3899e-01, -2.4531e-01,  7.9933e-02,\n",
+       "         -2.8845e-01, -8.2844e-01, -1.3598e-01,  3.3594e-01, -4.0136e-01,\n",
+       "         -1.2828e-01,  1.3238e-01,  5.5686e-02,  2.1532e-01,  2.2414e-01,\n",
+       "         -3.0435e-01,  2.0259e-01, -3.4683e-02,  2.4041e-02, -9.8629e-02,\n",
+       "          8.3441e-02, -1.3490e-01, -1.6664e-01, -1.0387e-01, -7.2240e-02,\n",
+       "         -1.2710e-01, -2.1375e-01, -1.0359e-01,  1.1537e-01,  4.7579e-02,\n",
+       "          3.4517e-01, -1.0966e-01, -4.5432e-01, -1.0649e-01, -1.0234e-01,\n",
+       "         -9.6426e-02,  8.3932e-02, -1.0280e-01,  3.0763e-01,  1.2954e-01,\n",
+       "         -8.3576e-02, -2.8063e-01, -2.0901e-01, -3.8675e-01,  1.7422e-01,\n",
+       "          5.2833e-01,  1.0518e-01, -4.5100e-01,  2.4380e-01, -2.3581e-02,\n",
+       "          3.1645e-01,  1.4098e-01, -5.6060e-01,  1.1616e-01,  2.6374e-01,\n",
+       "         -3.1148e-01,  2.9678e-01, -9.0686e-02, -4.5002e-01, -1.0523e-01,\n",
+       "         -1.3845e-01, -3.2581e-01, -1.0701e-02,  1.5117e-01, -4.1111e-02,\n",
+       "         -3.5451e-03,  1.0156e-01, -3.0193e-01,  1.3743e-01, -7.1552e-02,\n",
+       "          2.1767e-01, -8.3261e-02,  4.1303e-01, -4.6924e-01, -2.9840e-01,\n",
+       "          1.4235e-01,  1.7499e-01,  2.5991e-01,  1.4936e-01,  3.5778e-02,\n",
+       "          7.0628e-02, -4.3159e-01,  4.2154e-01,  3.7768e-01, -3.1587e-01,\n",
+       "         -5.2949e-02, -2.7423e-01, -2.0619e-01,  4.1262e-01,  2.1205e-01,\n",
+       "         -8.6177e-02, -3.8261e-02, -1.8199e-01,  3.9677e-01, -3.5723e-01,\n",
+       "          3.3150e-01, -1.2857e-02, -6.0813e-02, -8.1316e-01, -4.0352e-01,\n",
+       "          1.3397e-01, -2.0389e-01,  3.9813e-04, -5.8109e-01, -5.4017e-01,\n",
+       "         -1.4299e-01, -2.0194e-01, -4.3928e-01, -7.9109e-02, -2.9002e-01,\n",
+       "          1.6643e-02, -4.5106e-01,  1.3754e-01,  5.2305e-01,  3.2817e-01,\n",
+       "         -2.2742e-01, -2.3273e-01,  1.6968e-01, -2.5237e-01,  2.5388e-01,\n",
+       "          1.2913e-01, -3.3585e-02,  4.7344e-02,  4.9046e-01,  1.4321e-01,\n",
+       "          1.2433e-01, -4.2165e-01,  8.5115e-03, -2.9829e-02,  2.6215e-02,\n",
+       "          1.9132e-01, -3.1367e-01,  1.1619e-02,  3.3291e-03,  2.3753e-01,\n",
+       "         -1.2109e-01, -1.1076e-01,  3.0016e-01, -2.0713e-01,  6.2541e-02,\n",
+       "          2.9938e-02,  1.1100e-01,  2.5003e-01,  5.4072e-02,  2.3931e-02,\n",
+       "          8.7415e-01, -1.1659e-01,  3.1650e-01, -8.1356e-02,  8.9519e-02,\n",
+       "          7.3017e-01,  1.3797e-03,  1.9707e-02, -5.3940e-01,  5.7334e-01,\n",
+       "         -5.6615e-02,  5.1498e-01, -3.5614e-01, -2.6152e-01, -3.1733e-02,\n",
+       "          2.0266e-01, -4.8242e-01, -2.0163e-01,  8.8836e-02,  6.9157e-02,\n",
+       "         -2.6534e-01,  9.9821e-02,  5.5912e-02,  7.6970e-01,  6.4160e-01,\n",
+       "         -1.7163e-01,  1.2468e-01, -2.4122e-01,  2.3969e-01,  3.5857e-01,\n",
+       "          1.9039e-02,  8.1772e-02,  3.3391e-01, -6.9354e-02,  6.9029e-02,\n",
+       "         -1.2088e-01, -1.0914e-01, -2.1385e-01,  1.9172e-02,  5.2380e-02,\n",
+       "          4.5071e-01,  1.1229e-01,  1.2006e-01,  5.6065e-03, -6.5407e-01,\n",
+       "         -4.8379e-03, -2.2309e-01,  8.3660e-02, -6.8155e-02,  5.8539e-01,\n",
+       "          1.9238e-02, -6.9104e-01,  1.5199e-01, -2.2915e-01, -6.2103e-02,\n",
+       "          3.0751e-01,  2.3734e-01, -4.4469e-01, -7.5367e-02, -6.5961e-02,\n",
+       "          2.1845e-01, -2.4769e-01,  6.0343e-02, -3.4305e-02,  1.2984e-01,\n",
+       "         -5.7548e-03,  1.1150e-02, -1.2808e-01, -2.1543e-01,  2.1532e-01,\n",
+       "         -1.6476e-01, -9.4801e-02, -4.5693e-01,  4.0483e-01,  6.0412e-01,\n",
+       "         -2.0267e-01,  3.4277e-01, -2.3517e-01, -9.9057e-02, -5.2509e-01,\n",
+       "          1.4286e-01, -1.5221e+00,  8.6342e-02, -2.6853e-02,  9.5929e-01,\n",
+       "         -2.6923e-01,  1.6916e-01,  5.1306e-01, -3.3715e-01,  1.9992e-01,\n",
+       "          1.3118e-01, -2.0869e-01, -2.0449e-01,  9.6120e-02,  1.2016e-02,\n",
+       "          4.2820e-01, -1.0336e-01, -4.6412e-02, -6.1318e-02, -3.7152e-01,\n",
+       "         -1.2900e-01,  9.6740e-03, -2.0775e-01, -1.7015e-01, -4.3225e-02,\n",
+       "         -2.0433e-01, -8.9574e-03,  3.7457e-01,  7.9207e-02,  7.2365e-01,\n",
+       "         -7.3823e-01, -5.9392e-01, -1.1875e-01, -1.5766e-01,  1.8748e-01,\n",
+       "          5.5474e-02,  1.3120e-01, -4.9233e-01]], grad_fn=<MeanBackward1>)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[ 0.2685, -0.5767,  0.1836,  ..., -0.0248,  0.0143, -0.3322],\n",
+       "         [-0.1389, -0.2711, -0.1331,  ...,  0.1358,  0.2481, -0.6525]]],\n",
+       "       grad_fn=<NativeLayerNormBackward>)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "outputs[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'tuple' object has no attribute 'get_output_embeddings'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-37-829d38ea8a32>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_ids\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_output_embeddings\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'tuple' object has no attribute 'get_output_embeddings'"
+     ]
+    }
+   ],
+   "source": [
+    "model(input_ids).get_output_embeddings()"
    ]
   }
  ],
