--- a/UserText.ipynb
+++ b/UserText.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "user_tokens = pd.read_csv('s3://recsyschallenge2020/user_tokens.csv')\n",
+    "user_tokens = pd.read_csv('s3://recsys-challenge-2020/user_tokens.csv')\n",
     "tokenizer = BertTokenizer.from_pretrained('bert-base-multilingual-cased', do_lower_case=False)\n",
     "model = BertModel.from_pretrained('/dev/bert/')"
    ]
@@ -37,14 +37,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calculate_average(row):\n",
-    "    sum_tensors = torch.zeros([768], dtype=torch.float32)\n",
+    "def calculate_text(row):\n",
     "    tweet_token_list = ast.literal_eval(row)\n",
+    "    sum_text = ''\n",
     "    for token_list in tweet_token_list:\n",
-    "        token_list_embeddings = model(torch.tensor(list(map(int, token_list.split('\\t')))).unsqueeze(0))[0][0][0]\n",
-    "        sum_tensors = sum_tensors + token_list_embeddings\n",
-    "    avg = sum_tensors/len(row)\n",
-    "    return avg"
+    "        token_list_text = tokenizer.decode(list(map(int, token_list.split('\\t'))))\n",
+    "        sum_text = sum_text + token_list_text+ ' '\n",
+    "    return sum_text"
    ]
   },
   {
@@ -53,7 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "user_tokens['avg_embeddings'] = user_tokens['text_ tokens'].apply(lambda x: calculate_average(x))"
+    "user_tokens['user_text'] = user_tokens['text_ tokens'].apply(lambda x: calculate_text(x))"
    ]
   },
   {
@@ -62,7 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "user_tokens.to_csv('s3://recsyschallenge2020/user_tokens_embeddins.csv', index = False)"
+    "user_tokens.to_csv('s3://recsys-challenge-2020/user_tokens_text.csv', index = False)"
    ]
   }
  ],
